# C-programming

./: CMakeLists.txt  README.md
Programs/: 76thRepublicDay.c  Multiplication.c  NumberIsLessThanOrGreaterThan100.c  PalindromeNumber.c  StarProgram.c  SumOf2.c  x.c
