cmake_minimum_required(VERSION 3.30)
project(C_programming)

set(CMAKE_CXX_STANDARD 20)

add_executable(C_programming main.cpp
        Programs/SumOf2.c
        Programs/PrimeNumber.c
        Programs/Multiplication.c
        Programs/76thRepublicDay.c
        Programs/StarProgram.c
        Programs/PalindromeNumber.c
        Programs/efe.c
        Programs/NumberIsLessThanOrGreaterThan100.c
        Programs/x.c
)
